--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -5,6 +5,7 @@ gps_destination-distance=Destination distance cut-off
 gps_tag-name=GPS tag name
 gps_arrow-sprite=GPS arrow sprite
 gps_enable-teleport=Allow teleportation
+mtc_ctrl-click-behavior=Control+click action
 
 [mod-setting-description]
 gps_arrow-size=Change the size of the arrow (only applies to newly created arrows)
@@ -13,9 +14,25 @@ gps_destination-distance=How close to the target the player has to be before the
 gps_tag-name=Start the GPS when creating a tag with this name
 gps_arrow-sprite=Use the well-known navigation arrow, the arrow from BetterAlertArrows or the vanilla default arrow
 gps_enable-teleport=Enable shift+clicking a tag to teleport, needs to be enabled explicitly
+mtc_ctrl-click-behavior=Either teleport or set GPS on control+click (regular click sets the GPS resp. teleport)
+
+
+[string-mod-setting]
+mtc_ctrl-click-behavior-mtc_teleport=Teleport
+mtc_ctrl-click-behavior-mtc_gps=Set GPS destination
 
 [shortcut-name]
 mt_give-gps-selection-tool=GPS tool
 
 [controls]
 mt_give-gps-selection-tool=Get GPS tool
+
+[mt-gui]
+caption-gps=Map tag GPS
+caption-teleport=Map tag teleport
+caption-gps-teleport=Map tag GPS & teleport
+caption-teleport-gps=Map tag teleport & GPS
+label-gps=Click a tag to set the GPS destination
+label-teleport=Click a tag to teleport there immediately
+label-gps-teleport=Click a tag to set the GPS destination\nCtrl+click to teleport there immediately
+label-teleport-gps=Click a tag to teleport there immediately\nCtrl+click to set the GPS destination
